--- a/src/app/backOffice/side/side/side.component.html
+++ b/src/app/backOffice/side/side/side.component.html
@@ -13,20 +13,20 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a href="admin/TournoiList" class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" >
+        <a href="admin/TournoiList" class="nav-link collapsed"  >
           <i class="bi bi-card-list"></i><span>Liste des tournois</span>
         </a>
       </li><!-- End Components Nav -->
 
       <li class="nav-item">
-        <a href="admin/AddAcademy"  class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" >
+        <a href="admin/AddAcademy"  class="nav-link collapsed"  >
           <i class="bi bi-journal-text"></i><span>Ajout d'academie</span>
         </a>
        
       </li><!-- End Forms Nav -->
 
       <li class="nav-item">
-        <a href="admin/Tournoi"  class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse">
+        <a href="admin/Tournoi"  class="nav-link collapsed" >
           <i class="bi bi-person-lines-fill"></i><span>Organiser un tournoi</span>
         </a>
       </li><!-- End Tables Nav -->
